fix: header moving on mobile

--- a/src/Skeleton/Header/styles.scss
+++ b/src/Skeleton/Header/styles.scss
@@ -11,6 +11,11 @@
   height: 91px;
   border-bottom: 1px solid var(--secondary-color);
   background-color: #fff;
+  transition: transform 0.3s ease-in-out;
+
+  &.mobile.hide {
+    transform: translateY(-100%);
+  }
 
   /* .header::after {
     content: "";
